fix(modal.css): fix css selector to not overwrite properties on tablet and mobile format

--- a/just_stream_it/css/component/modal.css
+++ b/just_stream_it/css/component/modal.css
@@ -116,7 +116,7 @@
         display: none;
     }
 
-    .modal-tablet-img {
+    .modal .modal-tablet-img {
         display: none;
     }
 
